[chromium] Short scrollbar has empty track rect even when buttons have no size. https://bugs.webkit.org/show_bug.cgi?id=102580

Patch by Robert Flack <flackr@chromium.org> on 2013-03-14
Reviewed by James Robinson.

When computing the scrollbar track rect, don't assume the button's height is the track width.

Source/WebCore:

Test: platform/chromium/scrollbars/short-scrollbar.html
Note however that this doesn't expose the bug on any tested platforms and mock scrollbars
don't use ScrollbarThemeChromium.cpp. Manually running this test on linux chromiumos will
show the now present scrollbar track and thumb.

* platform/chromium/ScrollbarThemeChromium.cpp:
(WebCore::ScrollbarThemeChromium::trackRect):

LayoutTests:

* platform/chromium-linux/fast/forms/basic-textareas-expected.png:
* platform/chromium-linux/fast/forms/basic-textareas-quirks-expected.png:
* platform/chromium-linux/fast/overflow/overflow-x-y-expected.png:
* platform/chromium-linux/fast/parser/open-comment-in-textarea-expected.png:
* platform/chromium-linux/fast/replaced/width100percent-textarea-expected.png:
* platform/chromium-linux/platform/chromium/scrollbars/short-scrollbar-expected.png: Added.
* platform/chromium/scrollbars/short-scrollbar-expected.txt: Added.
* platform/chromium/scrollbars/short-scrollbar.html: Added.

Canonical link: https://commits.webkit.org/130684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145844 268f45cc-cd09-0410-ab3c-d52691b4dbfc